# assetel

./: .gitignore  Assesel_Architecture.drawio  Documents - Shortcut.lnk  README.md
.github/workflows/: Build.yml  Build_back.yml
gui/: CMakeLists.txt  UI.qml  main.cpp  main.qml
gui/misc/: CMakeLists.txt  abstractasseteltem.cpp  abstractasseteltem.h  connectorlistmodel.cpp  connectorlistmodel.h  folderview.cpp  folderview.h  mydocument.cpp  mydocument.h  nodeconnector.cpp  nodeconnector.h  nodelistmodel.cpp  nodelistmodel.h  parentsmodel.cpp  parentsmodel.h  test.h  treeitem.cpp  treeitem.h  treemanipulator.cpp  treemodel.cpp  treemodel.h  utilities.cpp  utilities.h  xmlconnector.cpp  xmlconnector.h  xmldocument.cpp  xmldocument.h  xmlelement.cpp  xmlelement.h  xmlnode.cpp  xmlnode.h  xmlprocessor.cpp  xmlprocessor.h  xmlwriter.cpp  xmlwriter.h
gui/qml/: Connector.qml  CreateNodeDialog.qml  CreateNodeDialog.qml.autosave  DrawingPane.qml  Node.qml  NodeTreeView.qml  NodeTreeView.qml.autosave  ProjectViewer.qml  ProjectViewer.qml.autosave  TreeView.qml  TreeViewItem.qml  UI.qml  folderview.qml  main.qml  qml.qrc
